--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@ frightcrawler-output.log
 scryfall-cache.sqlite
 
 .DS_Store
-build/
-dist/
-*.egg
-*.egg-info/
+
+/docs/
+/lib/
+/bin/
+/.shards/
+*.dwarf
