--- a/.github/workflows/crystal-tests.yml
+++ b/.github/workflows/crystal-tests.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [macos-latest, ubuntu-latest]
         crystal: [latest, nightly]
     runs-on: ${{ matrix.os }}
     steps:
