--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [macos-latest, ubuntu-latest]
-        crystal: [latest]
+        crystal: [latest, nightly]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Download source
