--- a/shard.yml
+++ b/shard.yml
@@ -9,6 +9,11 @@ targets:
   frightcrawler:
     main: src/frightcrawler.cr
 
+development_dependencies:
+  ameba:
+    github: crystal-ameba/ameba
+    version: ~> 0.14.3
+
 tags:
   - mtg
   - scryfall-api
