--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,6 @@
 name: Release
 
-on:
-  release:
-    types:
-      - created
+on: push
 
 jobs:
 
@@ -19,12 +16,9 @@ jobs:
         run: |
           shards build --production --release --static --no-debug
           strip ./bin/frightcrawler
-      - name: Upload
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.RLS_TOKEN }}
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./bin/frightcrawler
-          asset_name: frightcrawler-${{ github.event.release.tag_name }}-linux-x86_64
-          asset_content_type: binary/octet-stream
+          files: ./bin/frightcrawler
+          token: ${{ secrets.RLS_TOKEN }}
