--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,5 +24,5 @@ jobs:
         run: crystal tool format --check
       - name: Run Ameba
         run: bin/ameba
-#     - name: Run tests
-#       run: crystal spec --order=random --error-on-warnings
+      - name: Run tests
+        run: crystal spec --order=random --error-on-warnings
