--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,22 +6,64 @@ on:
       - "*.*.*"
 
 jobs:
-  dist_linux:
+  build-macos:
+    runs-on: macos-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Install Crystal
+      run: brew install openssl crystal && brew uninstall --ignore-dependencies llvm && brew install llvm@9
+    - name: Install dependencies
+      run: shards install
+    - name: Build the binary
+      env:
+        LLVM_CONFIG: /usr/local/opt/llvm@9/bin/llvm-config
+      run: |
+        ln -s /usr/lib/libxml2.2.dylib /usr/local/lib/liblibxml2.tbd.dylib
+        shards build --production --release --stats --progress
+    - name: Compress the binary
+      run: zip -rjX ./frightcrawler-darwin.zip ./bin/frightcrawler
+    - name: Upload
+      uses: actions/upload-artifact@v2
+      with:
+        name: frightcrawler-darwin
+        path: ./frightcrawler-darwin.zip
+
+  build-linux:
     runs-on: ubuntu-latest
     container:
-      image: crystallang/crystal:latest-alpine
+      image: crystallang/crystal
     steps:
-      - uses: actions/checkout@v2
-      - name: Update Libs
-        run: apk add --update --upgrade --no-cache --force-overwrite libxml2-dev yaml-dev
-      - name: Build
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: shards install
+      - name: Build the binary
         run: |
-          shards build --production --release --static --no-debug
-          GET_VERSION=$(git describe --tags --abbrev=0)
-          strip ./bin/frightcrawler
-          mv ./bin/frightcrawler ./bin/frightcrawler-$GET_VERSION-linux-x86_64
+          shards build --production --release --static --stats --progress
+      - name: Compress the binary
+        run: |
+          gzip ./bin/frightcrawler
+          mv ./bin/frightcrawler.gz ./bin/frightcrawler-linux-x86_64.gz
+      - name: Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: frightcrawler-linux-x86_64
+          path: ./bin/frightcrawler-linux-x86_64.gz
+
+  release:
+    needs: [build-macos, build-linux]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          path: ./artifacts
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ./bin/frightcrawler-*
+          files: |
+            ./artifacts/frightcrawler-darwin/frightcrawler-darwin.zip
+            ./artifacts/frightcrawler-linux-x86_64/frightcrawler-linux-x86_64.gz
+            ./artifacts/frightcrawler-windows-x86_64/frightcrawler-windows-x86_64.exe
           token: ${{ secrets.RLS_TOKEN }}
