--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,12 @@
+codecov:
+  require_ci_to_pass: false
+
 coverage:
   status:
     project:
       default:
         target: auto
         threshold: 10%
+
+comment:
+  require_changes: true
