--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -20,3 +20,8 @@ jobs:
         run: shards install --without-development
       - name: Run kcov
         run: ./.github/workflows/coverage
+      - name: Upload results
+        run: |
+          curl -Os https://uploader.codecov.io/latest/linux/codecov
+          chmod +x codecov
+          ./codecov
