--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,4 +24,4 @@ jobs:
         run: |
           curl -Os https://uploader.codecov.io/latest/linux/codecov
           chmod +x codecov
-          ./codecov
+          ./codecov -s coverage
