--- a/shard.yml
+++ b/shard.yml
@@ -9,6 +9,10 @@ targets:
   frightcrawler:
     main: src/frightcrawler.cr
 
+dependencies:
+  sqlite3:
+    github: crystal-lang/crystal-sqlite3
+
 development_dependencies:
   ameba:
     github: crystal-ameba/ameba
