--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ./bulk-data.json
-          key: ${{ runner.os }}-${{ hashFiles('**/bulk-data.json') }}
+          key: ${{ runner.os }}-${{ hashFiles('**/frightcrawler.db') }}
       - name: Install shards
         run: shards install
       - name: Build
