--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
         uses: crystal-lang/install-crystal@v1
         with:
           crystal: ${{ matrix.crystal }}
-      - name: Cache bulk data
+      - name: Cache DB
         uses: actions/cache@v2
         with:
           path: ./bulk-data.json
