--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ./bulk-data.json
-          key: ${{ runner.os }}-${{ hashFiles('**/frightcrawler.db') }}
+          key: ${{ runner.os }}-${{ hashFiles('~/frightcrawler/frightcrawler.db') }}
       - name: Install dependencies
         run: apt-get install -y libsqlite3-dev
       - name: Install shards
