--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Cache DB
         uses: actions/cache@v2
         with:
-          path: ./bulk-data.json
+          path: ~/frightcrawler/frightcrawler.db
           key: ${{ runner.os }}-${{ hashFiles('~/frightcrawler/frightcrawler.db') }}
       - name: Install dependencies
         run: apt-get install -y libsqlite3-dev
