--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,6 +1,12 @@
 name: Coverage
 
-on: [push, pull_request]
+on:
+  pull_request:
+    paths:
+      - '**.cr'
+  push:
+    paths:
+      - '**.cr'
 
 jobs:
   coverage:
