--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
       - name: Download source
         uses: actions/checkout@v2
+      - name: Cache DB
+         uses: actions/cache@v2
+         with:
+           path: ~/frightcrawler/frightcrawler.db
+           key: ${{ runner.os }}-${{ hashFiles('~/frightcrawler/frightcrawler.db') }}
       - name: Install dependencies
         run: apt-get install -y libsqlite3-dev
       - name: Install shards
