--- a/shard.yml
+++ b/shard.yml
@@ -16,6 +16,9 @@ development_dependencies:
   ameba:
     github: crystal-ameba/ameba
     version: ~> 0.14.3
+  webmock:
+    github: manastech/webmock.cr
+    branch: master
 
 tags:
   - mtg
