--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: apt-get install -y libsqlite3-dev
       - name: Install shards
-        run: shards install --without-development
+        run: shards install
       - name: Run kcov
         run: ./.github/workflows/coverage
       - name: Upload results
