--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,15 +12,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Install Crystal
-      run: brew install openssl crystal && brew uninstall --ignore-dependencies llvm && brew install llvm@9
+      run: brew install crystal
     - name: Install dependencies
       run: shards install
     - name: Build the binary
-      env:
-        LLVM_CONFIG: /usr/local/opt/llvm@9/bin/llvm-config
-      run: |
-        ln -s /usr/lib/libxml2.2.dylib /usr/local/lib/liblibxml2.tbd.dylib
-        shards build --release --stats --progress
+      run: shards build --release --stats --progress
     - name: Compress the binary
       run: zip -rjX ./frightcrawler-darwin.zip ./bin/frightcrawler
     - name: Upload
