--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - "*.*.*"
 
+permissions:
+  contents: write
+  pages: write
+
 jobs:
   build-macos:
     runs-on: macos-latest
